log
Fri 23 Sep 2022 11:34:41 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:17: error: invalid initializer
   40 |     TreeMap t = (TreeMap*)malloc(sizeof(TreeMap));
      |                 ^
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |     t->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     t->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     t->lower_than = lower_than;
      |      ^~
Compilation failed
4a9645b
